# SynthOfLife

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_log.txt
Source/: DebugLogger.h  DrumPad.cpp  DrumPad.h  EnvelopeProcessor.cpp  EnvelopeProcessor.h  GameOfLife.cpp  GameOfLife.h  Grid.cpp  Grid.h  ParameterManager.cpp  ParameterManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScaleUtility.h  Voice.cpp  Voice.h  test.cpp
Source/UI/: ADSRComponent.h  DrumPadComponent.cpp  DrumPadComponent.h  GameOfLifeComponent.cpp  GameOfLifeComponent.h  NoteActivityIndicator.cpp  NoteActivityIndicator.h  RandomTriggerComponent.cpp  RandomTriggerComponent.h  SampleSettingsComponent.cpp  SampleSettingsComponent.h
